--- a/src/main/resources/META-INF/gradle-plugins/android-checkstyle.properties
+++ b/src/main/resources/META-INF/gradle-plugins/android-checkstyle.properties
@@ -1,1 +1,1 @@
-implementation-class=com.lightydev.dk.gradle.checkstyle.CheckstylePlugin
+implementation-class=com.elegion.gradle.checkstyle.CheckstylePlugin
