--- a/src/main/resources/META-INF/gradle-plugins/android-findbugs.properties
+++ b/src/main/resources/META-INF/gradle-plugins/android-findbugs.properties
@@ -1,1 +1,1 @@
-implementation-class=com.lightydev.dk.gradle.findbugs.FindbugsPlugin
+implementation-class=com.elegion.gradle.findbugs.FindbugsPlugin
