--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,12 @@
 apply plugin: 'groovy'
 apply plugin: 'maven'
 
-dependencies {
-  compile gradleApi()
-  compile localGroovy()
-  compile 'com.android.tools.build:gradle:+'
+repositories {
+    mavenCentral()
 }
 
-uploadArchives {
-  repositories {
-    mavenDeployer {
-      repository(url: uri('../maven'))
-      pom.groupId = 'com.lightydev.dk'
-      pom.artifactId = 'gradle'
-      pom.version = '1.0.0'
-    }
-  }
+dependencies {
+    compile gradleApi()
+    compile localGroovy()
+    compile 'com.android.tools.build:gradle:+'
 }
